desktop/cargo_check.log
   Compiling my_openclaw v0.2.2 (D:\MVP\openclaw-secure-installer\desktop\src-tauri)
warning: hard linking files in the incremental compilation cache failed. copying files instead. consider moving the cache directory to a file system which supports hard linking in session dir `\\?\D:\MVP\openclaw-secure-installer\desktop\src-tauri\target\debug\incremental\my_openclaw-2pii7xxcqwtwg\s-hgrxniyn3r-13nzihz-working`

error[E0433]: failed to resolve: could not find `__cmd__list_mission_contracts` in `mission_commands`
   --> src\main.rs:192:27
    |
192 |         mission_commands::list_mission_contracts,
    |                           ^^^^^^^^^^^^^^^^^^^^^^ could not find `__cmd__list_mission_contracts` in `mission_commands`

error[E0433]: failed to resolve: could not find `__cmd__list_mission_artifacts` in `mission_commands`
   --> src\main.rs:193:27
    |
193 |         mission_commands::list_mission_artifacts,
    |                           ^^^^^^^^^^^^^^^^^^^^^^ could not find `__cmd__list_mission_artifacts` in `mission_commands`

error[E0433]: failed to resolve: could not find `__cmd__list_mission_run_linkages` in `mission_commands`
   --> src\main.rs:194:27
    |
194 |         mission_commands::list_mission_run_linkages,
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^ could not find `__cmd__list_mission_run_linkages` in `mission_commands`

For more information about this error, try `rustc --explain E0433`.
warning: `my_openclaw` (bin "my_openclaw") generated 1 warning
error: could not compile `my_openclaw` (bin "my_openclaw") due to 3 previous errors; 1 warning emitted
